# fastapi-mlactions

./: .gitignore  Dockerfile  README.md  main.py  model.py  package-lock.json  pyproject.toml
config/: .env
configurations/: k8s-deployment.yaml  service.yaml
llm_integration/: client.py
models/: __init__.py  chunk_model.py  health_model.py  key_vault_model.py  summary_models.py  toxic_model.py
routers/: __init__.py  check_toxic.py  chunking.py  docs.py  summary.py
services/: __init__.py  azure_keyvault.py  chunking.py  elasticsearch.py  html_stripper.py  nlp_enrichment.py  search_client.py
summary_agent/: __init__.py  summary_agent_crew.py
summary_agent/config/: agents.yaml  tasks.yaml
utilities/: toxic-model_download.py
